<resources>
    <string name="app_name">Ocenus</string>
    <string name="e_mail">E-mail:</string>
    <string name="kontynuuj">Kontynuuj</string>
    <string name="ocenus">Ocenus</string>
    <string name="has_o">Hasło:</string>
    <string name="guest_example_com">guest@example.com</string>
    <string name="zapami_taj_mnie">Zapamiętaj mnie</string>
    <string name="login">Login:</string>
    <string name="rejestracja" />
    <string name="rejestracja1">Rejestracja</string>
    <string name="logowanie">Logowanie</string>
    <string name="masz_konto_zaloguj_si">Masz konto? Zaloguj się</string>
    <string name="zarejestruj_si">Zarejestruj się</string>
    <string name="potwierd_has_o">Potwierdź hasło</string>
    <string name="email"> Wprowadź swój login </string>
    <string name="password">Password</string>
    <string name="ocenus2">Ocenus</string>
    <string name="has_o1"> Wprowadź swoje hasło</string>
    <string name="has_o2">Hasło:</string>
    <string name="e_mail3">E-mail:</string>
    <string name="logos">Logo</string>
    <string name="zaloguj_si">Zaloguj się</string>
    <string name="username">Nazwisko</string>
    <string name="name">Imię</string>
    <string name="imie2">Imię</string>
    <string name="imie3">imię</string>
    <string name="e_mail2">E-mail</string>
    <string name="email3">e-mail</string>
    <string name="nazwisko2">Nazwisko</string>
    <string name="nazwisko4">nazwisko</string>
    <string name="has_o3">Hasło</string>
    <string name="has_o4">hasło</string>
    <string name="edytuj_profil2">Edytuj Profil</string>
    <string name="login2">Login:</string>
    <string name="login3">Login:</string>


    <string name="changing_password_message">Changing Password</string>
    <string name="potwierd">Potwierdź</string>


    <string name="open_nav">Otwórz Szufladę Nawigacji</string>
    <string name="close_nav">Zamknij Szufladę Nawigacji</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dodaj_ocen">Dodaj Ocenę</string>
    <string name="dodaj_prz">Dodaj Przedmiot</string>
    <string name="dodaj_wydarzenie">Dodaj Wydarzenie</string>
    <string name="dodaj">Dodaj</string>
    <string name="imie_nazwisko">Imie Nazwisko</string>
    <string name="wyloguj">Wyloguj</string>
    <string name="ustawienia">Ustawienia</string>
    <string name="studia">Studia</string>
    <string name="statystyki">Statystyki</string>
    <string name="wydarzenia">Wydarzenia</string>
    <string name="edycja">Edycja</string>
    <string name="g_wna">Główna</string>
    <string name="nie_pami_tam_has_a">Nie pamiętam hasła</string>
    <string name="zapami_taj_mnie2">Zapamiętaj mnie</string>
    <string name="nie_masz_konta_zarejestruj_si">Nie masz konta? Zarejestruj się!</string>
    <string name="akceptuj_regulamin_i_zasady_u_ytkowania">Akceptuję Regulamin i Zasady Użytkowania</string>
    <string name="masz_konto_zaloguj_si2">Masz konto? Zaloguj się!</string>
    <string name="login4">Login</string>
    <string name="login5">Login</string>
    <string name="nazwisko3">Nazwisko</string>
    <string name="nazwisko5">Nazwisko</string>
    <string name="imie1">Imię</string>
    <string name="imie4">Imię</string>
    <string name="edytuj_profil3">Edytuj Profil</string>
    <string name="strona_g_wna1">STRONA GŁÓWNA</string>
    <string name="password_visibility_toggle1">password_visibility_toggle</string>
    <string name="stan_powiadomie">Stan powiadomień:</string>
    <string name="w_czone">Włączone</string>
    <string name="powiadomienia_ikona">Powiadomienia ikona</string>
    <string name="powiadomienia">Powiadomienia:</string>
    <string name="stan_muzyki">Stan muzyki:</string>
    <string name="w_czona">Włączona</string>
    <string name="muzyka_ikona">Muzyka ikona</string>
    <string name="muzyka">Muzyka:</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="adowanie_prosz_czeka">Ładowanie, proszę czekać...</string>
    <string name="strona_g_wna">Strona Główna</string>
    <string name="m_j_profil">Mój profil</string>
    <string name="dla_studenta">Dla studenta</string>
    <string name="inne">Inne</string>
    <string name="zg_o_b_d">Zgłoś błąd</string>
    <string name="o_aplikacji">O aplikacji</string>
    <string name="nazwisko">Nazwisko</string>
    <string name="nazwisk">Nazwisko</string>
    <string name="zresetuj_has_o">Zresetuj hasło</string>
    <string name="has_o5">Hasło</string>
    <string name="zmie_has_o">Zmień hasło</string>


</resources>