<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Stan powiadomien -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/asap"
            android:text="@string/stan_powiadomie"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/notificationStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_czone"
            android:textSize="16sp"
            android:fontFamily="@font/asap"
            android:textColor="@android:color/darker_gray" />

    </LinearLayout>

    <!-- Powiadomienia -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_notifications_24"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/powiadomienia_ikona" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/asap"
            android:gravity="center_vertical"
            android:text="@string/powiadomienia"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/notificationSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <!-- Stan muzyki -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/asap"
            android:text="@string/stan_muzyki"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/musicStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_czona"
            android:textSize="16sp"
            android:fontFamily="@font/asap"
            android:textColor="@android:color/darker_gray" />

    </LinearLayout>

    <!-- Muzyka -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_music_note_24"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/muzyka_ikona" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/asap"
            android:gravity="center_vertical"
            android:text="@string/muzyka"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/musicSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

</LinearLayout>