<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Logowanie">

    <EditText
        android:id="@+id/login_password"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="81dp"
        android:autofillHints=""
        android:background="@drawable/ocenus_ramka"
        android:fontFamily="@font/asap"
        android:drawablePadding="8dp"
        android:hint="@string/has_o1"
        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="@+id/login_email"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/login_email"
        app:layout_constraintTop_toBottomOf="@+id/login_email"
        app:layout_constraintVertical_bias="0.173" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="148dp"
        android:layout_height="71dp"
        android:fontFamily="@font/asap"
        android:text="@string/ocenus2"
        android:textAllCaps="false"
        android:textSize="42sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login_email"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="@+id/email3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="160dp"
        android:autofillHints=""
        android:background="@drawable/ocenus_ramka"
        android:drawablePadding="8dp"
        android:fontFamily="@font/asap"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="239dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#C30000"
        android:text="@string/zaloguj_si"
        android:fontFamily="@font/asap"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="@+id/login_password"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/login_password"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

    <TextView
        android:id="@+id/password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/asap"
        android:text="@string/has_o2"
        android:textColorLink="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_password"
        app:layout_constraintEnd_toEndOf="@+id/login_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email3"
        app:layout_constraintTop_toBottomOf="@+id/login_email"
        app:layout_constraintVertical_bias="0.68" />

    <TextView
        android:id="@+id/email3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/e_mail3"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/asap"
        app:layout_constraintBottom_toTopOf="@+id/login_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toStartOf="@+id/login_email"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="102dp"
        android:layout_height="100dp"
        android:layout_marginBottom="120dp"
        android:contentDescription="@string/logos"
        app:layout_constraintBottom_toTopOf="@+id/email3"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="@+id/email3"
        app:srcCompat="@drawable/wygld_api" />


</androidx.constraintlayout.widget.ConstraintLayout>