<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ProfilFragment">

    <View
        android:id="@+id/bottom_placeholder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/editButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:backgroundTint="#C30000"
        android:fontFamily="@font/asap"
        android:gravity="center"
        android:text="@string/edytuj_profil3"
        android:textAllCaps="true"
        android:textColorLink="@color/ocenusowski"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="@id/linearLayout"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintVertical_bias="0.104"
        tools:ignore="VisualLintButtonSize" />

    <ImageView
        android:id="@+id/profileImg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileImg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/imie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/imie4"
                android:fontFamily="@font/asap"
                android:textColor="@color/ocenusowski"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/profileImie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/imie1"
                android:fontFamily="@font/asap"
                android:textAlignment="viewEnd"
                android:textColor="@color/ocenusowski"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:alpha="0.5"
            android:background="@color/ocenusowski" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/nazwisko"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nazwisko5"
                android:fontFamily="@font/asap"
                android:textColor="@color/ocenusowski"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/profileNazwisko"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nazwisko3"
                android:fontFamily="@font/asap"
                android:textAlignment="viewEnd"
                android:textColor="@color/ocenusowski"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:alpha="0.5"
            android:background="@color/ocenusowski" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login5"
                android:fontFamily="@font/asap"
                android:textColor="@color/ocenusowski"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/profileLogowanie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login4"
                android:fontFamily="@font/asap"
                android:textAlignment="viewEnd"
                android:textColor="@color/ocenusowski"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:alpha="0.5"
            android:background="@color/ocenusowski" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/haslo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/has_o5"
                android:fontFamily="@font/asap"
                android:textColor="@color/ocenusowski"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/profileHaslo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/has_o5"
                android:fontFamily="@font/asap"
                android:textAlignment="viewEnd"
                android:textColor="@color/ocenusowski"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:alpha="0.5"
            android:background="@color/ocenusowski" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.396"
        app:layout_constraintStart_toStartOf="@+id/profileImg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.918"
        app:srcCompat="@drawable/baseline_add_circle_profile_24"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/goToMain"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:backgroundTint="#C30000"
        android:fontFamily="@font/asap"
        android:gravity="center"
        android:text="@string/zmie_has_o"
        android:textAllCaps="true"
        android:textColorLink="@color/ocenusowski"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="@id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/editButton"
        app:layout_constraintVertical_bias="0.045"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>

