<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialogbkg">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_remove_24"
        android:layout_gravity="center|top"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dodaj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/asap"
            android:padding="10dp"
            android:text="@string/dodaj"
            android:textAlignment="viewStart"
            android:textAllCaps="true"
            android:textColor="@color/ocenusowski"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/cofnij_dodaj"
            android:layout_width="38dp"
            android:layout_height="45dp"
            android:layout_marginStart="210dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/baseline_keyboard_arrow_down_24" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutOcena"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_dod_ocene_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/asap"
            android:text="@string/dodaj_ocen"
            android:textColor="@color/ocenusowski"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutWydarzenie"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_dod_notif_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dodaj_wydarzenie"
            android:fontFamily="@font/asap"
            android:textColor="@color/ocenusowski"
            android:layout_marginStart="30dp"
            android:textSize="18sp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutKierunek"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_dod_ocene_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dodaj Kierunek"
            android:fontFamily="@font/asap"
            android:textColor="@color/ocenusowski"
            android:layout_marginStart="30dp"
            android:textSize="18sp"/>

    </LinearLayout>


</LinearLayout>